@@ -12,5 +12,5 @@ forge_version=36.1.31
 
 jei_version=1.16.4:7.6.1.65
 top_version=1.16:1.16-3.0.8-16
-mcjtylib_version=1.16-5.1.0.30
+mcjtylib_version=1.16-5.1.2.31
 patchouli_version=1.16-42
