@@ -1,3 +1,6 @@
+Upcoming:
+- Update to latest McJtyLib
+
 1.16-3.0.4:
 - Update to latest McJtyLib
 
